--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.1.0",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -27,35 +28,47 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
     "@tanstack/react-table": "^8.16.0",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
-    "framer-motion": "^11.0.24",
+    "framer-motion": "^11.2.10",
     "iyzipay": "^2.0.61",
     "lucide-react": "^0.356.0",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.18",
+    "next-cloudinary": "^6.6.2",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-select": "^5.8.0",
+    "react-spinners": "^0.13.8",
     "recharts": "^2.12.6",
+    "resend": "^3.2.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
-    "prisma": "^5.11.0",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
