--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -22,6 +25,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
@@ -43,14 +47,17 @@
     "next-cloudinary": "^6.6.2",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-portal": "^4.2.2",
     "react-select": "^5.8.0",
     "react-spinners": "^0.13.8",
     "recharts": "^2.12.6",
     "resend": "^3.2.0",
     "sonner": "^1.5.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
@@ -62,6 +69,7 @@
     "@types/node": "^20",
     "@types/pg": "^8.11.6",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
